--- a/contato.html
+++ b/contato.html
@@ -13,6 +13,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="estilo.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+        <script src="validador.js"></script>
     </head>
     <body>
         <header>
@@ -31,7 +32,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 <h2>Contato:</h2>  
                 <p>
                   <i class="bi bi-telephone-outbound"></i>
-                  <a href="tel:+555133443344">(51)3344-3344</a>
+                  <a href="tel:+555133443344">(51) 3344-3344</a>
                 </p>
                 <p>
                   <i class="bi bi-whatsapp"></i>
@@ -71,7 +72,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                             <label for="fone">Telefone:</label> 
                         </div>
                         <div class="input">
-                            <input type="text" name="fone" id="fone">
+                            <input type="text" name="fone" id="fone" oninput="mascaraTel(this)">
                         </div>
                     </div>
                     <div class="row">
@@ -89,11 +90,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                         <div class="input">
                             <input type="radio" name="tpPessoa" id="tpCPF"
                                    onclick="document.getElementById('divCPF').style.visibility='visible';
-                                            document.getElementById('divCNPJ').style.visibility='hidden';">
+                                            document.getElementById('divCNPJ').style.visibility='hidden';
+                                            document.getElementById('cnpj').value='';
+                                            document.getElementById('cpf').focus()">
                             <label for="tpCPF">CPF</label>
                             <input type="radio" name="tpPessoa" id="tpCNPJ"
                                     onclick="document.getElementById('divCPF').style.visibility='hidden';
-                                             document.getElementById('divCNPJ').style.visibility='visible';">
+                                             document.getElementById('divCNPJ').style.visibility='visible';
+                                             document.getElementById('cpf').value='';
+                                             document.getElementById('cnpj').focus()">
                             <label for="tpCNPJ">CNPJ</label>
                         </div>
                         </div>
